# vla-temporal-compression-baseline

./: .gitignore  .venv-libero  AGENTS.md  README.md  experimentation.md  main.py  pyproject.toml  setup_pod.sh
configs/: ablation_gate_age.yaml  ablation_query_concat.yaml  baseline_sweep.yaml  default.yaml  diagnostic_event_gated_act_task2_seed44_cache128_workers4.yaml  diagnostic_event_gated_act_task2_seed44_cache128_workers8.yaml  diagnostic_event_gated_act_task2_seed44_freeze_vision.yaml  libero_long_act_chunked_corrected_h20.yaml  libero_long_act_chunked_corrected_h20_task2_phase_conditioned.yaml  libero_long_act_chunked_corrected_h20_task2_phase_continued20.yaml  libero_long_act_chunked_corrected_h20_task5_consistency40.yaml  libero_long_act_chunked_corrected_h20_task5_object_signals.yaml  libero_long_act_chunked_corrected_h20_task5_overfit.yaml  libero_long_act_chunked_corrected_h20_task5_phase_conditioned.yaml  libero_long_act_chunked_corrected_h20_task5_placement_weighted55.yaml  libero_long_act_chunked_corrected_h20_task5_state_action.yaml  libero_long_act_chunked_h20_kitchen4_drawer_phase_fromscratch.yaml  libero_long_act_chunked_h20_kitchen8_moka_phase_fromscratch.yaml  libero_long_act_chunked_h20_multitask_phase_conditioned.yaml  libero_long_act_chunked_h20_subset124_phase_conditioned.yaml  libero_long_age_gated_act_h20_kitchen4_drawer_phase_memory_fromscratch.yaml  libero_long_age_gated_act_h20_kitchen8_moka_phase_memory_fromscratch.yaml  libero_long_age_gated_act_h20_task2_phase_memory20.yaml  libero_long_diffusion_task5_h20_small.yaml  libero_long_diffusion_task5_h20_small_to50.yaml  libero_long_event_gated.yaml  libero_long_event_gated_act_h20_kitchen4_drawer_phase_memory_fromscratch.yaml  libero_long_event_gated_act_h20_kitchen8_moka_phase_memory_fromscratch.yaml  libero_long_event_gated_act_h20_task2_phase_memory.yaml  libero_long_event_gated_act_h20_task5_phase_memory.yaml  libero_long_event_gated_corrected_h1.yaml  libero_long_event_gated_resume_last_to50.yaml  libero_long_sliding_window.yaml  libero_long_sliding_window_corrected_h1.yaml  libero_long_sliding_window_corrected_h1_task5_overfit.yaml  milestone_episode_sliding.yaml  milestone_event_memory.yaml  milestone_sharded_event_memory.yaml  milestone_sharded_sliding.yaml  paper_age_gated_act_task2_seed187.yaml  (+25 more)
data/: libero_long
datasets/: __init__.py  data_loader.py  episode_dataset.py  episode_loader.py  episode_shard_dataset.py  libero_long_dataset.py  preprocess.py  streaming_vla_dataset.py  vla_dataset.py
docs/: diverse_openx_subset.md  (+4 more)
libero_rollout_env/: README.md  bootstrap.sh  pyproject.toml  run_all_rollouts.sh  run_rollout.sh
(+206 files in other folders)
